fix: title font on iOS

--- a/styles.css
+++ b/styles.css
@@ -54,6 +54,7 @@ main {
 h1,
 h2 {
   font-family: var(--title-font);
+  font-weight: normal;
 }
 
 ul {
